Trying to fix hamburger menu gap on my iPhone screen.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -138,15 +138,12 @@ body {
     top: -400px;
     transition: all .5s ease;
 }
-
 #ham-nav:checked~ul {
     top: 58px;
 }
-
 #ham-nav {
     display: none;
 }
-
 .hamburger-menu {
     position: relative;
     display: none;
@@ -159,7 +156,6 @@ body {
     font-size: 2.2rem;
     cursor: pointer;
 }
-
 .hamburger-navigation li {
     background-color: #333;
     color: white;
@@ -179,6 +175,9 @@ body {
     .nav {
         display: none;
     }
+}
+@media only screen and (max-width: 530px) {
+    #ham-nav:checked~ul { top: 48px; }
 }
 
 /* Standard NAVBAR */
